--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="/net/people/classes/CS230/handouts/project/csci230databaselibrary.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
