--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="/net/people/classes/CS230/handouts/project/csci230databaselibrary.jar"/>
+	<classpathentry kind="lib" path="/usr/people/classes/Java/mysql-connector-java-3.1.10-bin.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
